--- a/src/input.css
+++ b/src/input.css
@@ -20,3 +20,43 @@
 .active{
     @apply border-b-4 border-softRed
 }
+
+.hamburger{
+    cursor:pointer;
+    width: 24px; 
+    height: 24px ; 
+    transition : all 0.25s; 
+    position:relative;
+}
+.hamburger-top,
+.hamburger-middle , 
+.hamburger-bottom{
+    content : "";
+    position : absolute;
+    width: 24px ; 
+    height : 3px ; 
+    top:0; 
+    right : 0 ; 
+    background: #000;
+    transform : rotate(0);
+    transition : all 0.5s; 
+    border-radius: 30px;
+}
+.hamburger-middle{
+    transform : translateY(7px);
+   
+}
+.hamburger-bottom {
+    transform : translateY(14px);
+    background:#000;
+}
+.open .hamburger-middle{
+ display: none ; 
+}
+.open .hamburger-top{
+    transform : rotate(45deg) translateY(7px) translateX(7px);
+ }
+ .open .hamburger-bottom{
+    transform : rotate(-45deg) translateY(7px) translateX(-8px);
+
+ }
