--- a/src/input.css
+++ b/src/input.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 body{
- /* @apply bg-fixed bg-heroBg bg-no-repeat bg-cover */
+  overflow-x: hidden;
 }
 @media (min-width: 1020px){
     .bg-hero{
